RESOLVED FIXED303588
Event.composedPath should never contain nodes from UA shadow tree
https://bugs.webkit.org/show_bug.cgi?id=303588
Summary Event.composedPath should never contain nodes from UA shadow tree
Ryosuke Niwa
Reported 2025-12-04 17:41:24 PST
`Event.composedPath` should never contain nodes from UA shadow trees even when closed shadow roots are treated as open for extention / browser scripts.
Attachments
Ryosuke Niwa
Comment 1 2025-12-04 17:45:48 PST
EWS
Comment 2 2025-12-05 15:56:02 PST
Committed 304022@main (f5d64cbd34b3): <https://commits.webkit.org/304022@main> Reviewed commits have been landed. Closing PR #54885 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-12-05 15:57:11 PST
Note You need to log in before you can comment on or make changes to this bug.