Event.composedPath should never contain nodes from UA shadow tree https://bugs.webkit.org/show_bug.cgi?id=303588

Reviewed by Chris Dumez and Sihui Liu.

Event.prototype.composedPath should never include nodes from user-agent shadow trees
even when closed shadow trees are treated as open for the given content world.

Test: Tools/TestWebKitAPI/Tests/WebKitCocoa/UserContentController.mm

* Source/WebCore/dom/EventPath.cpp:
(WebCore::EventPath::computePathTreatingAllShadowRootsAsOpen const):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/UserContentController.mm:
(TEST(WKUserContentController, AllowAccessToClosedShadowRoots)):

Canonical link: https://commits.webkit.org/304022@main